--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thecodingmachine/graphqlite-laravel",
+    "name": "tylerfiekens/graphqlite-laravel",
     "description": "A Laravel service provider package to help you get started with GraphQLite in Laravel.",
     "keywords": [
         "GraphQL",
@@ -22,10 +22,10 @@
     "require": {
         "php": ">=7.2",
         "thecodingmachine/graphqlite": "^5.0",
-        "illuminate/console": "^5.7|^6.0|^7|^8",
-        "illuminate/container": "^5.7|^6.0|^7|^8",
-        "illuminate/support": "^5.7|^6.0|^7|^8",
-        "illuminate/cache": "^5.7|^6.0|^7|^8",
+        "illuminate/console": "^5.7|^6.0|^7|^8|^9",
+        "illuminate/container": "^5.7|^6.0|^7|^8|^9",
+        "illuminate/support": "^5.7|^6.0|^7|^8|^9",
+        "illuminate/cache": "^5.7|^6.0|^7|^8|^9",
         "symfony/psr-http-message-bridge": "^1.3.0 || ^2",
         "laminas/laminas-diactoros": "^2.2.2",
         "symfony/cache": "^4.3 || ^5"
