--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "illuminate/support": "^9 || ^10",
         "illuminate/cache": "^9 || ^10",
         "symfony/psr-http-message-bridge": "^1.3.0 || ^2",
-        "laminas/laminas-diactoros": "^2.2.2",
+        "laminas/laminas-diactoros": "^2.2.2 || ^3.0.0",
         "symfony/cache": "^4.3 || ^5 || ^6",
         "psr/container": "^2.0.2"
     },
