--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -1,61 +1,35 @@
 name: "Continuous Integration"
 
-on:
-  pull_request: ~
-  push:
-    branches:
-      - master
+on: [push]
 
 jobs:
-
-  continuous-integration:
-    name: "Continuous Integration"
-
+  build:
+    name: "PHP ${{ matrix.php }} - ${{ matrix.stability }}"
     runs-on: "ubuntu-latest"
 
     strategy:
       matrix:
-        include:
-          - install-args: "--prefer-lowest"
-            php-version: "8.1"
-          - install-args: ""
-            php-version: "8.1"
-          - install-args: ""
-            php-version: "8.2"
+        php: [8.3, 8.2]
+        stability: [prefer-lowest, prefer-stable]
       fail-fast: false
 
     steps:
-      # Cancel previous runs of the same branch
-      - name: cancel
-        uses: styfle/cancel-workflow-action@0.10.0
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          access_token: ${{ github.token }}
+          php-version: ${{ matrix.php }}
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+          coverage: none
 
-      - name: "Checkout"
-        uses: "actions/checkout@v3"
-
-      - name: "Install PHP with extensions"
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "xdebug"
-          php-version: "${{ matrix.php-version }}"
-          tools: composer:v2
-
-      - name: composer-cache-dir
-        id: composercache
+      - name: Install dependencies
         run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - name: composer-cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.composercache.outputs.dir }}
-          key: composer-${{ hashFiles('**/composer.json') }}-${{ matrix.install-args }}
-          restore-keys: |
-            composer-${{ hashFiles('**/composer.json') }}-${{ matrix.install-args }}
-            composer-${{ hashFiles('**/composer.json') }}-
-            composer-
-      - name: "Install dependencies with composer"
-        run: |
-          composer update ${{ matrix.install-args }} --no-interaction --no-progress --prefer-dist
-      - name: "Run tests with phpunit/phpunit"
+          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+
+      - name: List Installed Dependencies
+        run: composer show -D
+
+      - name: Execute tests
         run: "vendor/bin/phpunit"
