--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thecodingmachine/graphqlite-laravel",
+    "name": "tylerfiekens/graphqlite-laravel",
     "description": "A Laravel service provider package to help you get started with GraphQLite in Laravel.",
     "keywords": [
         "GraphQL",
@@ -20,20 +20,20 @@
         "test": "phpunit"
     },
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "thecodingmachine/graphqlite": "^v6.2.1",
-        "illuminate/console": "^9 || ^10 | ^11",
-        "illuminate/container": "^9 || ^10 | ^11",
-        "illuminate/support": "^9 || ^10 | ^11",
-        "illuminate/cache": "^9 || ^10 | ^11",
-        "symfony/psr-http-message-bridge": "^1.3.0 || ^2 || ^6",
+        "illuminate/console": "^11",
+        "illuminate/container": "^11",
+        "illuminate/support": "^11",
+        "illuminate/cache": "^11",
+        "symfony/psr-http-message-bridge": "^6",
         "laminas/laminas-diactoros": "^2.2.2",
-        "symfony/cache": "^4.3 || ^5 || ^6",
+        "symfony/cache": " ^6",
         "psr/container": "^2.0.2"
     },
     "require-dev": {
-        "orchestra/testbench": "^7 || ^8",
-        "phpunit/phpunit": "^9.6.6 || ^10.0.19",
+        "orchestra/testbench": "v9.5.2",
+        "phpunit/phpunit": "^10.0.19",
         "ext-sqlite3": "*"
     },
     "autoload": {
@@ -56,6 +56,6 @@
             ]
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
