--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": "^8.2",
-        "thecodingmachine/graphqlite": "^v6.2.1",
+        "thecodingmachine/graphqlite": "^v7.0.0",
         "illuminate/console": "^11",
         "illuminate/container": "^11",
         "illuminate/support": "^11",
@@ -29,7 +29,8 @@
         "symfony/psr-http-message-bridge": "^6",
         "laminas/laminas-diactoros": "^2.2.2",
         "symfony/cache": " ^6",
-        "psr/container": "^2.0.2"
+        "psr/container": "^2.0.2",
+        "ecodev/graphql-upload": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "v9.5.2",
@@ -43,7 +44,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "tests/Fixtures/App"
+            "App\\": "tests/Fixtures/App",
+            "Tests\\": "tests/"
         }
     },
     "extra": {
