Fix: Code Style

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "laminas/laminas-diactoros": "^2.2.2",
         "symfony/cache": " ^6",
         "psr/container": "^2.0.2",
-        "ecodev/graphql-upload": "^7.0"
+        "ecodev/graphql-upload": "^7.0",
+        "laravel/pint": "^1.18"
     },
     "require-dev": {
         "orchestra/testbench": "v9.5.2",
